@@ -5,6 +5,7 @@
 ?>
 <h1>拡張レポート</h1>
 <p>
+1ページ目、ヘッダーおよびフッターで、マクロを利用できます: <br><br>
 <b>(_DATETIME_)</b> マクロは、最初のページで利用できます。これは、PDF を生成した時点の日時に置き換えられます。<br>
 <b>(_REPORT_NAME_)</b> 現在のレポート名に置き換えられます。
 <br><br>
