@@ -1,20 +1,47 @@
-<?php
+?php
 /**
  * @package Include/help/ja
  */
 ?>
 <h1>警告状態</h1>
 
+<h2>数値タイプモジュール</h2>
+
 <p>
-このフィールドは、最小と最大の 2つの値があります。これらを正しく設定すると、モジュールが指定した値になった時に警告状態にすることができます。
+このフィールドは、最小と最大、条件の反転の 3つの値があります。これらを正しく設定すると、モジュールが指定した値になった時に警告状態にすることができます。
 </p>
 
 <p>
 これを理解するために例を見てみましょう。エージェントにおける CPU モジュールは、常に緑(正常)になっています。なぜなら、単純に 0% から 100% の間の情報を返しているだけだからです。CPU 使用率のモジュールで、使用率が 70% になった時に黄色(警告状態)にしたい場合は、次のように設定します。
 </p>
 
-<li>警告状態:70</li>
+<li>警告 最小値:70</li>
+<li>警告 最大値:0 (制限なし)</li>
 
 <p>
-これにより、値が 70 より大きくなると、表示が黄色(警告状態)になり、70を下回ると緑(正常状態)になります。
+これにより、値が 70 以上になると、表示が黄色(警告状態)になり、70を下回ると緑(正常状態)になります。
+</p>
+
+<p>
+条件の反転をチェックすると、設定した範囲外になったときにモジュールが警告状態になります。この場合であれば、70を下回った場合になります。
+</p>
+
+<h2>文字列タイプモジュール</h2>
+
+<p>
+文字列および条件の反転の 2つのフィールドがあります。値を正しく設定することにより、モジュールが警告状態になります。
+</p>
+
+<p>
+文字列フィールドは、正規表現で設定します。データがそれにマッチすると、モジュールが警告状態になります。
+</p>
+
+<li>文字列:(error|fail)</li>
+
+<p>
+この場合、モジュールの値に error または fail が含まれている場合に警告状態となります。
+</p>
+
+<p>
+条件の反転をチェックすると、正規表現にマッチしない場合にモジュールが警告状態になります。
 </p>
