@@ -1,3 +1,9 @@
+2013-10-12  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_reporting_advanced_tab.php,
+	include/help/ja/help_warning_status.php,
+	include/help/ja/help_critical_status.php: Added new explanations.
+
 2013-10-11  Vanessa Gil <vanessa.gil@artica.es>
 
 	* pandoradb.data.oracle.sql
